Fix: Author pages broken. Make Author & Category code more DRY. Add Instagram
_custom.scss
  Add Instagram Icon styles

custom-functions.php
  Rewrite display_author_bio and haSepharadi_cat_header so they can be used by both Author and Category pages

category.css
  Fix: content area not centered

category.php
  Move add_action() statements to top of file

author.php
  Move add_action() statements to top of file
  Fix: Affiliate Links code breaks site
  Use expanded format for "the loop", instead of concise format
  Move content header and author bio function to custom-functions.php

Switched indentation to tabs in above-mentioned files.

--- a/themes/haSepharadi/css/category.css
+++ b/themes/haSepharadi/css/category.css
@@ -10,6 +10,8 @@ body.category  {
 
 .full-width-content .content,
 #genesis-content {
+    float: none;
+    margin:  0 auto;
     max-width: initial;
     width: 1020px;
 }
